stream update 23/11